# whiteboard

whiteboardapp/: ALGORITHMS.md  CMakeLists.txt  README.md  build.sh  next.config.js  package-lock.json  package.json  run.sh  server.ts  tsconfig.server.json
whiteboardapp/docs/: INTEGRATION.md  NEXTJS.md  PATTERNS.md  SOCKET.md  WASM.md
whiteboardapp/include/wasm/: whiteboard.hpp
whiteboardapp/public/: whiteboard.js  whiteboard.wasm
whiteboardapp/public/wasm/: whiteboard.js  whiteboard.wasm
whiteboardapp/src/app/: globals.css  layout.tsx  page.tsx
whiteboardapp/src/app/room/[id]/: page.tsx
whiteboardapp/src/components/: Chat.tsx  Whiteboard.tsx
whiteboardapp/src/lib/: whiteboard.ts
whiteboardapp/src/lib/patterns/: ColorManager.ts  ExportManager.ts  ShapeManager.ts  ToolManager.ts  canvasState.ts  commands.ts  tools.ts
whiteboardapp/src/lib/socket/: client.ts  events.ts  server.ts
whiteboardapp/src/wasm/: whiteboard.cpp
whiteboardapp/wasm/: whiteboard.cpp
